--- a/app/src/main/res/layout/fragment_artists.xml
+++ b/app/src/main/res/layout/fragment_artists.xml
@@ -9,5 +9,6 @@
         android:id="@+id/rv_artists"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        android:paddingBottom="50dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
