--- a/app/src/main/res/layout/fragment_songs.xml
+++ b/app/src/main/res/layout/fragment_songs.xml
@@ -9,5 +9,6 @@
         android:id="@+id/rv_songs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="50dp"
         tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
