--- a/app/src/main/res/layout/player_mini.xml
+++ b/app/src/main/res/layout/player_mini.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="15dp"
+    android:padding="10dp"
+    android:background="#BABABA"
     android:orientation="horizontal">
 
     <ImageView
@@ -16,6 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:layout_marginLeft="10dp"
         android:orientation="vertical">
 
         <TextView
